--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <option value="TODOS">Todos</option>
     </select>
   </div>
-  nvas id="mainChart" height="180180"></canvas>
+  <canvas id="mainChart" height="180"></canvas>
 </div>
 <div class="container">
   <h1>Tracking descarga Buques a granel</h1>
@@ -201,10 +201,11 @@
       <div><label>Producto a cargar</label><input id="sindProducto" /></div>
       <div style="align-self:end;">
         <label>Estatus</label>
-        <select id="sindEstatus">
+        <select id="sindEstatus" onchange="toggleSindBodegaInput()">
           <option value="Cargado">Cargado</option>
           <option value="No Cargado">No Cargado</option>
         </select>
+        <span id="sindBodegaBox" style="display:inline;"></span>
         <button onclick="addSindicato()">Agregar</button>
         <input type="file" id="sindImport" accept=".csv" onchange="importSindicatoCSV()" style="margin-top:6px;" />
       </div>
@@ -224,7 +225,7 @@
     </div>
     <table id="sindTable">
       <thead>
-        <tr><th>#</th><th>Ficha</th><th>No.Listado</th><th>Placa</th><th>Producto</th><th>Estatus</th><th>Acciones</th></tr>
+        <tr><th>#</th><th>Ficha</th><th>No.Listado</th><th>Placa</th><th>Producto</th><th>Estatus</th><th>Bodega</th><th>Acciones</th></tr>
       </thead>
       <tbody></tbody>
     </table>
@@ -280,6 +281,7 @@ const DBKEY = 'trackingdescarga_prod_bod_dashboard';
 const PW_AUTORIZA = "AUTORIZADO2025";
 window.onload = function() {
   const raw = localStorage.getItem(DBKEY); if(raw) state = JSON.parse(raw);
+  toggleSindBodegaInput();
   updateAll();
 };
 function saveState() { localStorage.setItem(DBKEY,JSON.stringify(state)); }
@@ -395,10 +397,7 @@ function inicioIncidente() {
   alert("Incidente iniciado: " + incidenteActivo.start.toLocaleString() + " / Motivo: " + incidenteActivo.reason);
 }
 function finIncidente() {
-  if(!incidenteActivo.start) {
-    alert("Debes iniciar primero el incidente.");
-    return;
-  }
+  if(!incidenteActivo.start) { alert("Debes iniciar primero el incidente."); return; }
   const fin = new Date();
   const minutos = Math.round((fin - incidenteActivo.start) / 60000);
   state.incidents.push({
@@ -410,9 +409,7 @@ function finIncidente() {
     bodega: incidenteActivo.bodega
   });
   incidenteActivo = {id: null, start: null, reason: null, bodega: null};
-  saveState();
-  renderIncidents();
-  updateAll();
+  saveState(); renderIncidents(); updateAll();
 }
 function renderIncidents() {
   const tbody = document.querySelector('#incTable tbody');
@@ -448,21 +445,37 @@ function exportIncidentsCSV() {
   state.incidents.forEach(i => rows.push([i.start,i.end,i.minutes,i.reason,i.bodega]));
   downloadCSV(rows,"incidentes.csv");
 }
+function toggleSindBodegaInput() {
+  const estatus = document.getElementById('sindEstatus').value;
+  const box = document.getElementById('sindBodegaBox');
+  if(estatus==="Cargado") {
+    box.innerHTML='<label style="display:inline;font-size:13px;">Bodega</label><select id="sindBodega"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option></select>';
+  } else {
+    box.innerHTML='';
+  }
+}
 function addSindicato() {
   const ficha = document.getElementById('sindFicha').value.trim();
   const no = document.getElementById('sindNo').value.trim();
   const placa = document.getElementById('sindPlaca').value.trim();
   const producto = document.getElementById('sindProducto').value.trim();
   const estatus = document.getElementById('sindEstatus').value;
+  let bodega = '';
+  if(estatus==='Cargado') {
+    const sel = document.getElementById('sindBodega');
+    if(!sel) {alert("Debe elegir una bodega para camión cargado.");return;}
+    bodega = sel.value;
+  }
   if(!ficha || !no) {alert("Ficha y No.listado obligatorios");return;}
   const existe = state.sindicato.some(x => x.ficha === ficha && x.no === no);
   if(existe) {alert("Ya existe esa ficha en ese listado.");return;}
-  state.sindicato.push({id: Date.now(), ficha, no, placa, producto, estatus});
+  state.sindicato.push({id: Date.now(), ficha, no, placa, producto, estatus, bodega});
   saveState(); renderSindicato();
   document.getElementById('sindFicha').value = '';
   document.getElementById('sindNo').value = '';
   document.getElementById('sindPlaca').value = '';
   document.getElementById('sindProducto').value = '';
+  toggleSindBodegaInput();
 }
 function importSindicatoCSV() {
   const input = document.getElementById('sindImport');
@@ -473,10 +486,10 @@ function importSindicatoCSV() {
     lines.forEach((line, idx) => {
       if(idx == 0) return;
       const parts = line.split(',');
-      if(parts.length >= 5) {
+      if(parts.length >= 6) {
         const ficha = parts[0], no = parts[1], existe = state.sindicato.some(x => x.ficha === ficha && x.no === no);
         if(!existe) {
-          state.sindicato.push({id: Date.now(), ficha: parts[0], no: parts[1], placa: parts[2], producto: parts[3], estatus: parts[4]});
+          state.sindicato.push({id: Date.now(), ficha: parts[0], no: parts[1], placa: parts[2], producto: parts[3], estatus: parts[4], bodega: parts[5]});
         }
       }
     });
@@ -496,6 +509,8 @@ function renderSindicato() {
   document.getElementById('totalCargados').innerText = totalCargados;
   document.getElementById('totalNoCargados').innerText = totalNoCargados;
   list.forEach((s, idx) => {
+    let bodegaHtml='';
+    if(s.estatus==="Cargado")bodegaHtml=s.bodega?`Bodega ${s.bodega}`:'';
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${idx + 1}</td>
@@ -509,6 +524,7 @@ function renderSindicato() {
           <option value="No Cargado"${s.estatus == "No Cargado" ? " selected" : ""}>No Cargado</option>
         </select>
       </td>
+      <td>${bodegaHtml}</td>
       <td><button onclick="delSindicato(${s.id})">Eliminar</button></td>
     `;
     tbody.appendChild(tr);
@@ -518,6 +534,8 @@ function updateEstatusSindicato(id, val) {
   let idx = state.sindicato.findIndex(s => s.id == id);
   if(idx > -1) {
     state.sindicato[idx].estatus = val;
+    if(val==="Cargado"&&!state.sindicato[idx].bodega)state.sindicato[idx].bodega='1';
+    if(val!=="Cargado")state.sindicato[idx].bodega='';
     saveState();
     renderSindicato();
   }
@@ -581,18 +599,15 @@ function renderChart() {
   dataP = dataM-dataD;
   if(chartObj)chartObj.destroy();
   chartObj=new Chart(ctx,{
-    type:'bar',
+    type:'doughnut',
     data:{
       labels:["Manifestado","Descargado","Pendiente"],
       datasets:[{label:prod,backgroundColor:["#099","purple","#f8b347"],data:[dataM,dataD,dataP]}]
     },
     options:{
-      indexAxis:'y',
-      borderRadius:6,
-      plugins:{legend:{display:false}},
-      scales:{x:{beginAtZero:true},y:{beginAtZero:true}},
-      animation:{duration:500},
-      elements: { bar: {borderSkipped:false, borderWidth:2, borderColor:'#fff'}}
+      aspectRatio:2,
+      plugins:{legend:{display:true,position:"bottom"}},
+      animation:{duration:500}
     }
   });
 }
